<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ayan.sinacec.SignIn">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_name"
        android:textColor="@color/welcome"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="17dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_label_avatar"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/accountET"
            android:layout_margin="11dp"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/key"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/keyET"
            android:layout_margin="11dp"
            android:layout_gravity="center_horizontal" />

        <Button
            android:layout_width="266dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/init"
            android:textColor="@color/white"
            android:id="@+id/signInB"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/signUp"
            android:textColor="@color/textHelper"
            android:id="@+id/signUpTV"
            android:layout_margin="11dp"/>

    </LinearLayout>

</LinearLayout>
