<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ayan.sinacec.Mall">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/mall"
                android:id="@+id/nameTV"
                android:textAlignment="center"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/address"
                android:id="@+id/addressTV"
                android:textAlignment="center"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:src="@drawable/building"
                android:id="@+id/imageIV"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:hint="@string/manager"
                android:id="@+id/managerET"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:enabled="false"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/opening"
                    android:textAlignment="center"
                    android:layout_marginRight="7dp"
                    android:id="@+id/openingTV" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/closing"
                    android:textAlignment="center"
                    android:layout_marginLeft="7dp"
                    android:id="@+id/closingTV" />

            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                android:ems="10"
                android:hint="@string/webSide"
                android:id="@+id/webSideET"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:enabled="false"
                android:layout_gravity="center_horizontal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:hint="@string/phone"
                android:id="@+id/phoneET"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:enabled="false"
                android:layout_gravity="left"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify"
                android:id="@+id/modifyB"
                android:visibility="invisible"
                android:layout_gravity="right" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
