<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ayan.sinacec.Service">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name"
            android:layout_margin="7dp"
            android:id="@+id/nameTV" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/shop"
            android:layout_margin="7dp"
            android:id="@+id/shopTV" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textAlignment="center"
        android:text="@string/mall"
        android:layout_marginTop="17dp"
        android:layout_gravity="center"
        android:id="@+id/mallTV" />

    <ImageView
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:id="@+id/imageIV"
        android:layout_marginTop="17dp"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:id="@+id/descriptionTV"
        android:layout_marginTop="17dp"
        android:layout_gravity="center_horizontal" />


</LinearLayout>
