<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ayan.sinacec.Area">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/mall"
                android:id="@+id/mallTV"
                android:textAlignment="center"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_gravity="center_horizontal" />

            <ImageView
                android:layout_width="350dp"
                android:layout_height="200dp"
                android:src="@drawable/building"
                android:id="@+id/imageIV"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_gravity="center_horizontal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:id="@+id/nameET"
                    android:enabled="false"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center_vertical" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_gravity="center_horizontal">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:hint="@string/latitud"
                    android:layout_marginRight="5dp"
                    android:id="@+id/latitudET"
                    android:enabled="false"
                    android:layout_gravity="center_vertical"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:hint="@string/longitud"
                    android:layout_marginLeft="5dp"
                    android:enabled="false"
                    android:id="@+id/longitudET"
                    android:layout_gravity="center_vertical"/>

            </LinearLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="245dp"
                android:id="@+id/shopsLV"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
